--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                     <a href="{% url 'logout' %}" class="bg-gray-500 hover:bg-red-600 text-white mt-[10px] font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105">Logout</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="bg-gray-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105">Login</a>
-                   <a href="{% url 'register' %}" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105">Register</a>
+                  {# <a href="{% url 'register' %}" class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105">Register</a>#}
                 {% endif %}
             </div>
         </div>
