--- a/ggfm_dbs/templates/ggfm_dbs/login.html
+++ b/ggfm_dbs/templates/ggfm_dbs/login.html
@@ -24,9 +24,11 @@
                 Login
             </button>
         </form>
+        {% comment "" %}
         <p class="mt-4 text-center text-gray-600">
             Don't have an account? <a href="{% url 'register' %}" class="text-blue-600 hover:underline">Register here</a>.
         </p>
+        {% endcomment %}
     </div>
 </div>
 {% endblock %}
